--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <span id="result"></span><br>
 
         <footer>
-             &#169; This Calculator belongs to Hemant
+             &#169; Everyone Can Get Rich
         </footer>
 
         </div>
